--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </body>
 
 <footer>
-    <a href="./About Me.Html">About Me</a>
-    <a href="./Contact Me.Html">Contact Me</a><br/>
+    <a href="./about.html">About Me</a>
+    <a href="./contact.html">Contact Me</a><br/>
     <small>Copyright © 2023 Erik Baquero. All Rights Reserved.</small>
 </footer>
 </html>
