--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h1>Erik Baquero</h1>
     <img src="./Me.jpeg" alt="A Picture Of Erik Baueroo" Height="400">
     <h2>Summary</h2>
-    <p>My name is Erik Baquero. I am currently a Accoutns Receivable Analyst at an aviation company.<br/>
-    My goal is to transition from fiance into a Full Stack Developer for a large company and continue to improve my skills as a developer.<br/>
+    <p>My name is Erik Baquero. I am currently a Accounts Receivable Analyst at an Aviation company In Fort Lauderdale FL.<br/>
+    My goal is to transition from finance into a Full Stack Developer for a large company and continue to improve my skills as a developer.<br/>
     </p>
 </head>
 <hr/>
