--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Education</h2>
     <ul>
         <li>Bachelors Degree In Business Finance</li>
-        <li>Masters Degree In Computer Science (2023-Present)</li>
+        <li>Masters Degree In Computer Science (August 2023-Present)</li>
     </ul>
 <hr/>
     <h2>Experience</h2>
