--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <hr/>
     <h2>Experience</h2>
     <ul>
-        <li>Accounts Receivable Analyst (03/1/2022-Present)</li>
+        <li>Cash Application Analyst (08/2023-Present)<li>
+        <li>Accounts Receivable Analyst (03/1/2022-08/2023)</li>
         <li>Account Manager (06/20/2021-03/1/2022)</li>
         <li>Bookkeeper (01/1/2018-06/01/2022)</li>
     </ul>
